# openshift-client-python

./: .ci-operator.yaml  .gitattributes  .gitignore  Makefile  Pipfile  README.MD  README.md  doctoc.sh  monitoring.Dockerfile  pyproject.toml  readme.md  requirements.txt  run_unittests.sh  setup.py
ansible/: rebuild_module.digest  rebuild_module.sh  run_sample_playbook.sh  sample_playbook.yml
ansible/example/: simple.yml
ansible/module_utils/: openshift
ansible/roles/openshift/meta/: main.yml
ansible/roles/openshift_client_python/: readme.md
ansible/roles/openshift_client_python/meta/: main.yml
ansible/roles/openshift_client_python/module_utils/: openshift
ansible/roles/openshift_python/: readme.md
ansible/roles/openshift_python/meta/: main.yml
docs/: PACKAGING.md
examples/: cluster_tests.py  coverage.py  custom_apiobjects.py  dump.py  ephemeral_project.py  etcd_status.py  exception_tracking.py  ignore_me.py  login.py  modify_and_apply.py  multiple_contexts.py  oc_action.py  quotas.py  report.py  simple.py  templates.py
examples/ansible_simple/: run.sh
hack/: verify-ansible-module.sh
images/: Dockerfile  monitoring.Dockerfile
jobs/ci/: pr.groovy
lambda/: package.sh
lambda/model/python/: model.py
